--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.3.4",
     "axios": "0.18.0",
     "bootstrap-vue": "2.0.0-rc.11",
     "font-awesome": "4.7.0",
